@@ -17,6 +17,9 @@ Release 1.1.3 (in development)
 * #859: Fix exception under certain circumstances when not finding
   appropriate objects to link to.
 
+* #860: Do not crash when encountering invalid doctest examples, just
+  emit a warning.
+
 
 Release 1.1.2 (Nov 1, 2011) -- 1.1.1 is a silly version number anyway!
 ======================================================================
